# aithershell

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT-CHECKLIST.md  DEPLOYMENT-COMPLETE.md  DEVELOPER-GUIDE.md  Dockerfile  GITHUB-SETUP.md  LICENSE  MANIFEST.in  PHASE1-COMPLETE-STANDALONE.md  README.md  README_PYPI.md  RELEASE_NOTES.md  SECURITY.md  aither_entry.py  aithershell.nuspec  chocolateyinstall.ps1  chocolateyuninstall.ps1  install.sh  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build-multi-platform.yml  publish.yml
Formula/: aithershell.rb
aithershell/: DELIVERY_SUMMARY.txt  IMPLEMENTATION_SUMMARY.md  INDEX.md  README_TELEMETRY.md  TELEMETRY.md  VERIFICATION_REPORT.md  __init__.py  __main__.py  a2a.py  aeon.py  agent.py  aither_bridge.py  artifacts.py  assistant.py  assistant_ext.py  auth.py  bugreport.py  builtin_tools.py  chat.py  chronicle.py  cli.py  cloud_deploy.py  commands.py  completions.py  config.py  context.py  conversations.py  deploy.py  elysium.py  elysium_connect.py  engine_cli.py  events.py  federation.py  fleet.py  forge.py  gateway.py  genesis_client.py  graph_memory.py  identity.py  license.py  (+39 more)
aithershell/commands_local/: __init__.py  init_cmd.py
aithershell/compliance/: __init__.py  air_gap.py  attestation.py  model_licenses.py  pdf_report.py
aithershell/data/: model_licenses.yaml
aithershell/faculties/: __init__.py  base.py  code_graph.py  embeddings.py  memory_graph.py
aithershell/identities/: aither.yaml  apollo.yaml  athena.yaml  atlas.yaml  chaos.yaml  demiurge.yaml  hera.yaml  hydra.yaml  iris.yaml  lyra.yaml  morgana.yaml  muse.yaml  prometheus.yaml  saga.yaml  themis.yaml  vera.yaml  viviane.yaml
aithershell/llm/: __init__.py  anthropic.py  base.py  ollama.py  openai_compat.py  picolm.py
aithershell/platform/: __init__.py  cli.py  paths.py
aithershell/platform/ai/: __init__.py  aitherllm.py  comfyui_service.py  llm_prompt_generator.py  model_browser.py  model_manager.py  models.py  ollama.py  ollama_service.py  orchestration_prompts.py  persona_image_system.py  prompt_builder.py  prompt_engine.py  reasoning.py  refinement_engine.py  safety.py  safety_mode.py  speculative_generator.py
aithershell/platform/communication/: __init__.py  a2a_client.py  a2a_federation.py  aeon_client.py  council.py  demiurge_client.py  group_chat.py  mailbox.py  multi_agent_chat.py
aithershell/platform/infrastructure/: __init__.py  agent_server.py  args.py  auth.py  config_loader.py  cost.py  dependencies.py  ecosystem.py  fast_image.py  hybrid_executor.py  local_router.py  nvidia.py  persona.py  profiling.py  resource_manager.py  routing_manager.py  runner.py  services.py  startup.py  status_monitor.py  system_utils.py  task_router.py  tasks.py  utils.py
aithershell/platform/infrastructure/subagent/: __init__.py  context.py  forge.py  scout.py  tools.py
aithershell/platform/memory/: __init__.py  anchor_automation.py  anchor_generator.py  game_engine.py  memory.py  memory_system.py  storyboard.py
aithershell/platform/tools/: __init__.py  awareness_tools.py  common_tools.py  flow_tools.py  mcp_client_tools.py  qol_tools.py  reinforcement_tools.py  system_instructions.py  tool_loader.py
aithershell/platform/tools/agent_tools/: __init__.py  generation.py  mcp_bridge.py  narrative.py  state.py
aithershell/platform/tools/tools/: __init__.py  aither_tools.py  fal_tools.py  generate_base.py  google_genai_client.py  infrastructure_tools.py  mcp_client.py  meshy_tools.py  narrative_tools.py  personal_assistant_tools.py  state_manager.py  subagent_tools.py
aithershell/platform/ui/: __init__.py  cli.py  commands.py  console.py  ui.py
aithershell/plugins/: __init__.py
aithershell/plugins/builtins/: __init__.py  aitherzero.py  cloud.py  companion.py  gaming.py  github_app.py  marketplace.py  project.py  scope.py  secret.py  setup.py
examples/: batch-translate.aither  code-review.aither  deploy-check.aither  deploy_check.py  hello.aither  status.yaml
tests/: __init__.py  conftest.py  test_commands.py  test_config.py  test_events.py  test_genesis_client.py  test_plugins.py  test_shell.py
