[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aithershell"
version = "1.1.0"
description = "AitherShell — Local-first AI agent runtime. Engine + CLI for running capable agents on local models."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Aitherium", email = "hello@aitherium.com" }]
keywords = ["ai", "agents", "llm", "aither", "ollama", "openai", "anthropic", "vllm", "fleet", "multi-agent", "local-first", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Environment :: Console",
]

dependencies = [
    "httpx>=0.26.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "argcomplete>=3.0",
    "click>=8.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]

[project.optional-dependencies]
voice = ["sounddevice", "numpy", "webrtcvad"]
anthropic = ["anthropic>=0.18.0"]
openai = ["openai>=1.0.0"]
sdk = ["aithersdk>=0.1.0"]
graphs = ["numpy>=1.24.0"]
embedding = [
    "sentence-transformers>=2.3.0",
    "torch>=2.0.0",
]
platform = [
    "pydantic>=2.0.0",
    "aiohttp>=3.8.0",
    "requests>=2.28.0",
    "typer>=0.9.0",
    "jinja2>=3.1.0",
    "prompt_toolkit>=3.0.0",
    "python-dotenv>=1.0.0",
    "psutil>=5.9.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.20.0",
]
all = [
    "aithershell[voice,anthropic,openai,graphs,platform]",
]

[project.scripts]
aither = "aithershell.cli:entry"

[project.urls]
Homepage = "https://aitherium.com"
Repository = "https://github.com/Aitherium/aithershell"
Documentation = "https://portal.aitherium.com/docs"

[tool.hatch.build.targets.wheel]
packages = ["aithershell"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"

