[metadata]
name = aithershell
version = 1.0.0
author = Aitherium
author_email = alex@aitherium.com
description = AitherShell - The kernel shell for AitherOS
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aitherium/aithershell
project_urls =
    Bug Tracker = https://github.com/aitherium/aithershell/issues
    Documentation = https://github.com/aitherium/aithershell/wiki
    Source Code = https://github.com/aitherium/aithershell
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development
    Topic :: System :: Shells

[options]
packages = find:
python_requires = >=3.10
install_requires =
    httpx>=0.26.0
    pyyaml>=6.0
    rich>=13.0
    argcomplete>=3.0
    click>=8.1.0

[options.packages.find]
exclude = tests*

[options.entry_points]
console_scripts =
    aither = aithershell.cli:entry

[options.extras_require]
dev =
    pytest>=7.0
    pytest-asyncio>=0.20.0
    pytest-cov>=4.0
    black>=23.0
    ruff>=0.1.0
    mypy>=1.0
voice =
    sounddevice
    numpy
    webrtcvad
all =
    sounddevice
    numpy
    webrtcvad
